--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The main document</title>
     <link rel="stylesheet" href="index.css" />
-     <!-- არ აბია ფაილი -->
+     
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>
+        Georgia
+    </p>
 </body>
 </html>
